[ISIS-21] Fix overflow bug on notes page

--- a/frontend/src/app/notes/components/notes-selected/notes-selected.component.css
+++ b/frontend/src/app/notes/components/notes-selected/notes-selected.component.css
@@ -3,6 +3,12 @@
   flex-direction: column;
   align-items: center;
   width: 100%;
+  height: calc(100% - 32px);
+  overflow-y: scroll;
+}
+
+::-webkit-scrollbar {
+  display: none;
 }
 
 .note isis-note-content {
